--- a/wiki-yishan.adoc
+++ b/wiki-yishan.adoc
@@ -77,6 +77,7 @@ include::linux/firewalld.adoc[leveloffset=2]
 include::linux/chroot.adoc[leveloffset=2]
 include::linux/ssh.adoc[leveloffset=2]
 include::linux/systemd.adoc[leveloffset=2]
+include::linux/journalctl.adoc[leveloffset=2]
 
 == *Vagrant*
 
