--- a/linux/systemd.adoc
+++ b/linux/systemd.adoc
@@ -10,6 +10,8 @@ Les distributions Fedora, Mageia, Open SUSE et Debian ont adopté ce système pa
 
 Ubuntu utilise upstart et Gentoo utilise OpenRC.
 
+NOTE: systemd est le premier processus qui démarre sur votre système (PID 1) et il est responsable de l'initialisation, de la gestion et de l'arrêt des autres services et processus sur votre système.
+
 ==  Fichiers de configuration
 
 La configuration des services se trouve par défaut dans le répertoire /lib/systemd/system ou /usr/lib/systemd/system.
@@ -63,6 +65,20 @@ systemctl list-units
 systemctl --failed --type=service
 ----
 
+=== Identifiez les services inactifs
+
+[source,bash]
+----
+systemctl list-units --type=service --state=inactive
+----
+
+=== Désactivez les services inutiles
+
+[source,bash]
+----
+sudo systemctl disable <service_name>
+----
+
 === Créer un service simple
 
 `vim /etc/systemd/system/mon-service.service`
@@ -102,24 +118,17 @@ systemctl start mon-service.service
 systemctl status mon-service.service
 ----
 
-=== logs si necessaire
-
-[source,bash]
-----
-journalctl -xn | ccze -A
-----
-
-## Les services propres à systemd
+== Les services propres à systemd
 
 Systemd utilise en interne un certain nombre de services pour la gestion du système, citons en quelques uns :
 
-- systemd-journald : messages du système et des programmes
-- systemd-logind : connexion des utilisateurs
-- systemd-vconsole-setup : configuration des consoles virtuelles
-- systemd-remount-api-vfs : remontage du système de fichier, en tenant compte des options de fstab
-- systemd-sysctl : application des paramètres système de /etc/sysctl.conf
-- systemd-stdout-syslog-bridge : utilisation de syslog pour les processus de systemd
-- systemd-tmpfiles-setup : création de fichiers et répertoires temporaires
+* *systemd-journald* : messages du système et des programmes
+* *systemd-logind* : connexion des utilisateurs
+* *systemd-vconsole-setup* : configuration des consoles virtuelles
+* *systemd-remount-api-vfs* : remontage du système de fichier, en tenant compte des options de fstab
+* *systemd-sysctl* : application des paramètres système de /etc/sysctl.conf
+* *systemd-stdout-syslog-bridge* : utilisation de syslog pour les processus de systemd
+* *systemd-tmpfiles-setup* : création de fichiers et répertoires temporaires
 
 === Lister le temps de démarrage des differents services
 
